--- a/client/sass/layout/_header.scss
+++ b/client/sass/layout/_header.scss
@@ -3,7 +3,7 @@
     z-index: 2;
     top: 0;
     right: left;
-    height: $headerHeight;
+    // height: $headerHeight;
     width: 100%;
     // opacity: .5;
     text-align: left;
