--- a/client/style/screen.css
+++ b/client/style/screen.css
@@ -407,7 +407,6 @@ body {
   z-index: 2;
   top: 0;
   right: left;
-  height: 25vh;
   width: 100%;
   text-align: left;
 }
@@ -727,8 +726,9 @@ section.container section.space article header author {
   position: relative;
   font-family: "FuturaStd-Medium";
   top: -0.66667rem;
+  white-space: nowrap;
 }
-/* line 127, ../sass/layout/_article.scss */
+/* line 128, ../sass/layout/_article.scss */
 section.container section.space article header a.delete {
   display: inline-block;
   position: absolute;
@@ -747,17 +747,17 @@ section.container section.space article header a.delete {
   background-image: url("../images/elementClose.png");
   background-size: 100% 100%;
 }
-/* line 142, ../sass/layout/_article.scss */
+/* line 143, ../sass/layout/_article.scss */
 section.container section.space article header a.delete:hover {
   background-color: rgba(255, 255, 255, 0.4);
 }
-/* line 150, ../sass/layout/_article.scss */
+/* line 151, ../sass/layout/_article.scss */
 section.container section.space article .card {
   position: relative;
   max-width: 32rem;
   width: auto;
 }
-/* line 155, ../sass/layout/_article.scss */
+/* line 156, ../sass/layout/_article.scss */
 section.container section.space article .card.text {
   background-color: white;
   padding: 0.5rem 1rem 0.5rem 1rem;
@@ -771,30 +771,30 @@ section.container section.space article .card.text {
   transition-property: transform, -webkit-transform, -moz-transform, box-shadow, -webkit-box-shadow, -moz-box-shadow, background-color;
   width: auto;
 }
-/* line 160, ../sass/layout/_article.scss */
+/* line 161, ../sass/layout/_article.scss */
 section.container section.space article .card.image {
   width: 48rem;
   overflow: hidden;
 }
-/* line 165, ../sass/layout/_article.scss */
+/* line 166, ../sass/layout/_article.scss */
 section.container section.space article .card.image .ui-resizable-handle:after {
   color: white !important;
 }
-/* line 174, ../sass/layout/_article.scss */
+/* line 175, ../sass/layout/_article.scss */
 section.container section.space article .card.website:hover .card.header.text .description {
   opacity: 1;
   height: auto;
 }
-/* line 180, ../sass/layout/_article.scss */
+/* line 181, ../sass/layout/_article.scss */
 section.container section.space article .card.website .card.header.text {
   position: relative;
   z-index: 2;
 }
-/* line 184, ../sass/layout/_article.scss */
+/* line 185, ../sass/layout/_article.scss */
 section.container section.space article .card.website .card.header.text .title p {
   line-height: 1.25em;
 }
-/* line 188, ../sass/layout/_article.scss */
+/* line 189, ../sass/layout/_article.scss */
 section.container section.space article .card.website .card.header.text .url p {
   font-size: .666em;
   font-family: "FuturaStd-Medium";
@@ -805,7 +805,7 @@ section.container section.space article .card.website .card.header.text .url p {
   line-height: 2em;
   opacity: .25;
 }
-/* line 194, ../sass/layout/_article.scss */
+/* line 195, ../sass/layout/_article.scss */
 section.container section.space article .card.website .card.header.text .description {
   opacity: 0;
   height: 0;
@@ -825,27 +825,27 @@ section.container section.space article .card.website .card.header.text .descrip
   -webkit-transition-property: opacity;
   transition-property: opacity;
 }
-/* line 207, ../sass/layout/_article.scss */
+/* line 208, ../sass/layout/_article.scss */
 section.container section.space article .card.website .card.header.text .description p {
   font-size: 10pt;
   line-height: 1.5em;
   font-family: "FuturaStd-Medium";
   padding-top: 1.5rem;
 }
-/* line 210, ../sass/layout/_article.scss */
+/* line 211, ../sass/layout/_article.scss */
 section.container section.space article .card.website .card.header.text .description p a {
   word-break: break-all;
 }
-/* line 218, ../sass/layout/_article.scss */
+/* line 219, ../sass/layout/_article.scss */
 section.container section.space article .card.website.image {
   max-height: 36rem;
 }
-/* line 228, ../sass/layout/_article.scss */
+/* line 229, ../sass/layout/_article.scss */
 section.container section.space article .card img {
   width: 100%;
   margin-bottom: -12pt;
 }
-/* line 234, ../sass/layout/_article.scss */
+/* line 235, ../sass/layout/_article.scss */
 section.container section.space article .ui-resizable-handle {
   z-index: 9999999;
   right: 0;
@@ -863,7 +863,7 @@ section.container section.space article .ui-resizable-handle {
   height: 1rem;
   width: 1rem;
 }
-/* line 248, ../sass/layout/_article.scss */
+/* line 249, ../sass/layout/_article.scss */
 section.container section.space article .ui-resizable-handle:hover {
   opacity: .5;
 }
